[package]
name = "wormhole-charter"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.136", features = ["derive"]}
tui = "0.18"
crossterm = "0.23"
serde_json = "1.0.79"
wormhole_charter_derive = {path = "./wormhole_charter_derive"}